# Babel

./: CMakeLists.txt  README.md  conanfile.txt  protocole.md
client/: main.cpp
client/Audio/: IAudio.hpp  ICompressor.h  Opus.cpp  Opus.hpp  Portaudio.cpp  Portaudio.hpp
client/LibHandler/: LibHandler.cpp  LibHandler.hpp
client/Networking/: Client.cpp  Client.hpp  ClientUdp.cpp  ClientUdp.hpp  IClient.hpp
client/Ui/: AddFriendPage.cpp  AddFriendPage.hpp  CallWindow.cpp  CallWindow.hpp  ChatWidget.cpp  ChatWidget.hpp  FriendInviteWidget.cpp  FriendInviteWidget.hpp  FriendInvitesPage.cpp  FriendInvitesPage.hpp  FriendItemWidget.cpp  FriendItemWidget.hpp  FriendsWindow.cpp  FriendsWindow.hpp  MainWindow.cpp  MainWindow.hpp  MessageWidget.cpp  MessageWidget.hpp
client/Ui/ConnectionWindow/: ConnectionPage.cpp  ConnectionPage.hpp  ConnectionWindow.cpp  ConnectionWindow.hpp  ConnexionPage.cpp  ConnexionPage.hpp  MenuPage.cpp  MenuPage.hpp  Window.cpp  Window.hpp
client/Ui/ConnexionPage/: ConnexionPage.cpp  ConnexionPage.hpp
client/Ui/MenuPage/: MenuPage.cpp
client/audio/: Opus.cpp  Opus.hpp  Portaudio.cpp  Portaudio.hpp
server/: db.sqlite  main.cpp
server/Database/: Database.cpp  Database.hpp  Friendship.cpp  Friendship.hpp  IModel.hpp  IType.hpp  Message.cpp  Message.hpp  User.cpp  User.hpp
server/Networking/: Call.cpp  Call.hpp  HandlePacket.cpp  HandlePacket.h  HandlePacket.hpp  IHandlePacket.hpp  IHandlepacket.h  Server.cpp  Server.hpp  Session.cpp  Session.hpp
shared/Networking/: ArgumentsReader.cpp  ArgumentsReader.hpp  ArgumentsWriter.cpp  ArgumentsWriter.hpp  Packet.cpp  Packet.hpp  PacketTypes.hpp  RawPacket.cpp  RawPacket.hpp  RawTypes.hpp
shared/Networking/Packets/: PacketAcceptCall.cpp  PacketAcceptCall.hpp  PacketAudio.cpp  PacketAudio.hpp  PacketCall.cpp  PacketCall.hpp  PacketCallReceived.cpp  PacketCallReceived.hpp  PacketCmdAcceptFriend.cpp  PacketCmdAcceptFriend.hpp  PacketCmdDenyFriend.cpp  PacketCmdDenyFriend.hpp  PacketCmdInviteFriend.cpp  PacketCmdInviteFriend.hpp  PacketCmdListFriends.cpp  PacketCmdListFriends.hpp  PacketCmdListInvites.cpp  PacketCmdListInvites.hpp  PacketCmdListMessages.cpp  PacketCmdListMessages.hpp  PacketCmdLogin.cpp  PacketCmdLogin.hpp  PacketCmdLogout.cpp  PacketCmdLogout.hpp  PacketCmdRegister.cpp  PacketCmdRegister.hpp  PacketFriendAdded.cpp  PacketFriendAdded.hpp  PacketFriendDenied.cpp  PacketFriendDenied.hpp  PacketInviteReceived.cpp  PacketInviteReceived.hpp  PacketMessageOpen.cpp  PacketMessageOpen.hpp  PacketMessageReceive.cpp  PacketMessageReceive.hpp  PacketMessageSend.cpp  PacketMessageSend.hpp  PacketRespAcceptFriend.cpp  PacketRespAcceptFriend.hpp  (+16 more)
shared/audio/: Opus.cpp  Opus.hpp  Portaudio.cpp  Portaudio.hpp
